--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <title>CSWSD</title>
   </head>
   <body>
-    <div class="container">
+      <?php 
+        include('header.html');
+      ?>
+    <div class="container-fluid">
       <form>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">
