--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     ></script>
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>CSWSD
+    <title>CSWSD user
     </title>
   </head>
   <body>
