--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
       crossorigin="anonymous"
     ></script>
     <!-- External CSS -->
-    <link rel="stylesheet" href="style.css" />
-    <title>CSWSD user
-    </title>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>CSWSD user</title>
   </head>
   <body>
+    <div class="container">
       <?php 
         include('header.html');
       ?>
-    <div class="container-fluid">
       <form>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">
@@ -55,7 +54,7 @@
             Check me out
           </label>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <input type="submit" class="btn btn-primary" />
       </form>
     </div>
   </body>
