--- a/index.html
+++ b/index.html
@@ -1,61 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"
-    ></script>
-    <!-- External CSS -->
-    <link rel="stylesheet" href="css/style.css" />
-    <title>CSWSD</title>
-  </head>
-  <body>
-    <div class="container">
-      <?php 
-        include('header.html');
-      ?>
-      <form>
+<?php 
+  include('header.html');
+  session_start();
+  if (isset($_SESSION['username'])) {
+      header("location: home.html");
+      exit();
+  }
+?>      
+      <div class="container">
+             <form action="includes/login.inc.php" method="post">
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">
-            Email address
-          </label>
           <input
-            type="email"
+            type="text"
             class="form-control"
-            id="exampleInputEmail1"
-            aria-describedby="emailHelp"
+            id="UUsername"
+            name="UUsername"
+            placeholder="Username/Email..."
+            required
           />
-          <div id="emailHelp" class="form-text">
-            We'll never share your email with anyone else.
-          </div>
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
           <input
             type="password"
             class="form-control"
-            id="exampleInputPassword1"
+            id="UPassword"
+            name="UPassword"
+            placeholder="Password..."
+            required
           />
         </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-          <label class="form-check-label" for="exampleCheck1">
-            Check me out
-          </label>
-        </div>
-        <input type="submit" class="btn btn-primary" />
+        <input type="submit" id="submit" name="submit" class="btn btn-primary" />
+        <br><br>
+        <a href="sign-up.html" class="btn btn-primary">Create Account</a>
       </form>
-    </div>
-  </body>
-</html>
+      </div>
+      <?php 
+        include('footer.html');
+      ?>
