--- a/header.html
+++ b/header.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Location api -->
+    <script src="https://f001.backblazeb2.com/file/buonzz-assets/jquery.ph-locations-v1.0.0.js"></script>
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -19,7 +21,11 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f0809a;">
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: #f0809a;"
+    >
+      <div class="container">
       <button
         class="navbar-toggler"
         type="button"
@@ -46,8 +52,11 @@
           <li class="nav-item">
             <h3 class="display-3">CSWD : City of Santa Rosa Laguna</h3>
           </li>
+          <li class="nav-item">
+            <a href="includes/logout.inc.php">Log Out</a>
+          </li>
         </ul>
       </div>
+    </div>
     </nav>
-  </body>
-</html>
+
