--- a/registration.html
+++ b/registration.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col">
                 <label for="MName">Middle Name (Gitnang Pangalan)</label>
-                <input type="text" id="MName" name="MName" required>
+                <input type="text" id="MName" name="MName">
             </div>
             <div class="col">
                 <label for="LName">Last Name (Apelyido) </label>
@@ -28,7 +28,7 @@
             </div>
             <div class="col">
                 <label for="suffix">Suffix</label>
-                <input type="text" id="suffix" name="suffix" required>
+                <input type="text" id="suffix" name="suffix">
             </div>
         </div>
 
@@ -64,6 +64,7 @@
                         <option value="B">B</option>
                         <option value="AB">AB</option>
                         <option value="O">O</option>
+                        <option value="Unknown">Unknown</option>
                     </select>
                 </div>
             </div>
