--- a/contact-us.html
+++ b/contact-us.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    CONTACT US
-</body>
-</html>
+<?php 
+    include('header.html');
+?>
+<div class="container">
+    <h1>Contact Us</h1>
+</div>
+<?php 
+    include('footer.html');
+?>
