--- a/privacy-and-policy.html
+++ b/privacy-and-policy.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Privacy Policy</h1>
+<?php 
+    include('header.html');
+?>
+
+<div class="container">
+<h1>Privacy Policy</h1>
 <p>Last updated: May 06, 2022</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
@@ -179,5 +175,7 @@
 <ul>
 <li>By email: populationmanagementsystem@gmail.com</li>
 </ul>
-</body>
-</html>
+</div>
+<?php 
+    include('footer.html');
+?>
