--- a/header.html
+++ b/header.html
@@ -18,6 +18,8 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
+    <!-- External CSS -->
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
   </head>
   <body>
