--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-light text-center text-white">
   <!-- Grid container -->
-  <div class="container p-4 pb-0">
+  <div class="container-fluid p-4 pb-0">
     <!-- Section: Social media -->
     <section class="mb-4">
       <!-- About Us -->
@@ -29,16 +29,13 @@
         role="button"
         ><i class="fab fa-google"></i
       >Privacy Policy</a>
+      <!-- Copyright -->
+      <div>© 2022 Copyright: PUP Santa Rosa Campus</div>
+      <!-- Copyright -->
     </section>
     <!-- Section: Social media -->
   </div>
   <!-- Grid container -->
-
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2022 Copyright: PUP Santa Rosa Campus
-  </div>
-  <!-- Copyright -->
 </footer>
 
   </body>
