--- a/header.html
+++ b/header.html
@@ -18,14 +18,26 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
+    <!-- Tab Icon -->
+    <link rel="shortcut icon" href="images/santarosa-logo.ico" type="image/x-icon">
     <!-- External CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>
+      <?php 
+        if($page == 'index'){echo 'CSWD';}
+        elseif($page == 'sign_up'){echo 'Sign Up';}
+        elseif($page == 'home'){echo 'Home';}
+        elseif($page == 'registration'){echo 'Registration';}
+        elseif($page == 'privacy'){echo 'Privacy Policy';}
+        elseif($page == 'about-us'){echo 'About Us';}
+        elseif($page == 'contact-us'){echo 'Contact Us';}
+      ?>
+    </title>
   </head>
   <body>
     <nav
       class="navbar navbar-expand-lg navbar-light"
-      style="background-color: #f0809a;"
+      style="background-image: linear-gradient(to right, #0f2d37, #d70080);"
     >
       <div class="container">
       <button
@@ -44,7 +56,7 @@
           <li class="nav-item">
             <a class="navbar-brand" href="index.html">
               <img
-                src="images/santarosa-logo.png"
+                src="images/ABAlogo.png"
                 alt=""
                 width="80"
                 height="70"
@@ -52,11 +64,16 @@
             </a>
           </li>
           <li class="nav-item">
-            <h3 class="display-3">CSWD : City of Santa Rosa Laguna</h3>
+            <h3 class="display-3 text-white">SantaRosa CSWD</h3>
           </li>
-          <li class="nav-item">
-            <a href="includes/logout.inc.php">Log Out</a>
-          </li>
+          <?php
+            require_once 'includes/dbh.inc.php';
+            require_once 'includes/functions.inc.php';
+            if (isset($_SESSION['username'])) {
+              echo '<li class="nav-item"><a class="btn btn-dark" href="includes/logout.inc.php">Log Out</a></li>';
+            }
+          ?>
+         
         </ul>
       </div>
     </div>
