--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <?php 
-  include('header.html');
   session_start();
+  $page = "index";
+  include('header.html');
   if (isset($_SESSION['username'])) {
       header("location: home.html");
       exit();
   }
-?>      
-      <div class="container">
-             <form action="includes/login.inc.php" method="post">
-        <div class="mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id="UUsername"
-            name="UUsername"
-            placeholder="Username/Email..."
-            required
-          />
-        </div>
-        <div class="mb-3">
-          <input
-            type="password"
-            class="form-control"
-            id="UPassword"
-            name="UPassword"
-            placeholder="Password..."
-            required
-          />
-        </div>
-        <input type="submit" id="submit" name="submit" class="btn btn-primary" />
-        <br><br>
-        <a href="sign-up.html" class="btn btn-primary">Create Account</a>
-      </form>
-      </div>
-      <?php 
+?>
+<div class="d-flex align-items-center justify-content-center">
+  <form action="includes/login.inc.php" method="post">
+    <div class="mb-3">
+      <input
+        type="text"
+        class="form-control"
+        id="UUsername"
+        name="UUsername"
+        placeholder="Username/Email..."
+        required
+      />
+    </div>
+    <div class="mb-3">
+      <input
+        type="password"
+        class="form-control"
+        id="UPassword"
+        name="UPassword"
+        placeholder="Password..."
+        required
+      />
+    </div>
+    <input type="submit" id="submit" name="submit" class="btn btn-primary" />
+    <br />
+    <br />
+    <a href="sign-up.html" class="btn btn-primary">Create Account</a>
+  </form>
+</div>
+<?php 
         include('footer.html');
       ?>
