--- a/sign-up.html
+++ b/sign-up.html
@@ -1,5 +1,7 @@
 <?php 
-    include('header.html');
+  session_start();
+  $page = "sign_up";
+  include('header.html');
 ?>
 <div class="container">
   <form action="includes/sign-up.inc.php" method="post">
