--- a/header.html
+++ b/header.html
@@ -36,10 +36,10 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-lg navbar-light"
+      class="navbar navbar-expand-sm navbar-light"
       style="background-image: linear-gradient(to right, #0f2d37, #d70080);"
     >
-      <div class="container">
+      <div class="container-fluid">
       <button
         class="navbar-toggler"
         type="button"
@@ -58,13 +58,13 @@
               <img
                 src="images/ABAlogo.png"
                 alt=""
-                width="80"
-                height="70"
+                width="60"
+                height="50"
               />
             </a>
           </li>
           <li class="nav-item">
-            <h3 class="display-3 text-white">SantaRosa CSWD</h3>
+            <h3 class="display-6 text-white">SantaRosa CSWD</h3>
           </li>
           <?php
             require_once 'includes/dbh.inc.php';
