--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
       exit();
   }
 ?>
-<div class="d-flex align-items-center justify-content-center">
-  <form action="includes/login.inc.php" method="post">
+<div class="text-center mt-4" id="login-container">
+  <form id="login-form" action="includes/login.inc.php" method="post">
+    <div class="display-5 mt-4 mb-4 text-white">
+      Login
+    </div>
     <div class="mb-3">
       <input
         type="text"
@@ -17,6 +20,7 @@
         name="UUsername"
         placeholder="Username/Email..."
         required
+        autofocus
       />
     </div>
     <div class="mb-3">
@@ -29,12 +33,13 @@
         required
       />
     </div>
-    <input type="submit" id="submit" name="submit" class="btn btn-primary" />
-    <br />
-    <br />
-    <a href="sign-up.html" class="btn btn-primary">Create Account</a>
+    <div class="mt-3 mb-3">
+      <input type="submit" id="submit" name="submit" class="btn btn-lg btn-primary w-100"/>
+    </div>
+    <a href="sign-up.html" class="btn btn-success">Create Account</a>
   </form>
 </div>
+
 <?php 
         include('footer.html');
       ?>
