--- a/header.html
+++ b/header.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- JQuery for change div -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Google reCaptcha -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Location api -->
